# tonyfast

./: .buildinfo  .gitignore  .gitmodules  2023-02-05-pipings.html  2025-08-02-meta-schema-frame.ipynb  404.html  README.html  README.md  _version.py  dodo.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  genindex.html  index.html  jupyter-lite.json  mime.types  mkdocs.yml  objects.inv  overrides.json  pyproject.toml  regexs.html  search.html  searchindex.js  sitemap.xml  style.css  utils.py
.doctrees/: README.doctree  environment.pickle
.doctrees/tonyfast/: readme.doctree
.github/workflows/: cleanup.yml  publish.yml
_sources/: README.md
_sources/tonyfast/: readme.md
branch/workflow-branch/: 2023-02-05-pipings.html  _version.py  commands.txt  feed_rss_created.xml  feed_rss_updated.xml  index.html  jupyter_lab_config.py  mkdocs.py  objects.inv  regexs.html  sitemap.xml
branch/workflow-branch/run/files/midgy/: README.md  mkdocs.yml  pyproject.toml
branch/workflow-branch/run/files/midgy/docs/: README.md  design.md  midgy.md
branch/workflow-branch/run/files/midgy/docs/language/: basics.md  code_fences.md  container_blocks.md  doctest.md  flags.md  front_matter.md  line_continuations.md  magics.md  test_language.py
branch/workflow-branch/run/files/midgy/docs/programs/: command-line-with-typer.md
branch/workflow-branch/run/files/midgy/src/midgy/: __init__.py  __main__.py  _version.py  front_matter.py  lexers.py  loader.py  render.py
draft/: index.html
overrides/partials/: actions.html  comments.html
run/: jupyter-lite.json
run/files/: _version.py
run/pypi/: all.json  importnb-6.6.6-py3-none-any.whl  midgy-6.6.6-py3-none-any.whl  pidgy-6.6.6-py3-none-any.whl
search/: search_index.json
tonyfast/: README.md  __init__.py  __main__.py  dodo.py  ipython_config.py  mkdocs.py  readme.html  regexs.ipynb  style.css
tonyfast/16d3bc82d69890949212b46040bd86e1/: embed-rdf.html
tonyfast/196c9aae8d51434c138722687e718364/: details-summary.html
tonyfast/203fee00e29fadaaa0604e915eb7a8f6/: all-the-displays.md.html  mimemediatypes.md.html  readme.html
tonyfast/405e3ec4f800fbc9d2b0a142ef4d4b10/: readme.html  utterance.html
tonyfast/994f37c4540ce91c6784/: world.html
tonyfast/a9bb09cb019e201ed95b76a6f558a106/: copy-pasta-trick.html
tonyfast/b617e4f87337a50e1361ab043b53c2c7/: 2021-testing-in-notebooks.html
tonyfast/b77d1cb766f65f026c67/: README.html
tonyfast/bd97099fb9f932a6402e5c6161f14748/: arrays.html  readme.html
tonyfast/e7dd7ff3d808d57b77e9765626a73a91/: testing-notebooks.md.html
tonyfast/xxii/: 2022-11-12-async-import.ipynb  (+18 more)
xxii/: 2022-11-12-async-import.html  2022-11-12-pluggy-experiments.html  2022-11-17-assignment-expression-display.html  2022-11-23-better-dask-shape.html  2022-11-26-package-mimic-and-rel-imports.html  2022-12-05-markdown-to-doctest.html  2022-12-09-pyproject-analysis.html  2022-12-13-github-api-stats.html  2022-12-15-html-tags-study.html  2022-12-16-issue-activity-graphql.html  2022-12-17-find-dependencies-in-content.html  2022-12-18-mkdocs-task.html  2022-12-19-integrating-typer.html  2022-12-20-pyscript-nbconvert.html  2022-12-21-lite-build.html  2022-12-22-pyproject-analysis.html  2022-12-23-mkdocs-plugin.html  2022-12-30-typer-magic.html  2022-12-31-jupyter-config-files.html  2022-12-31-markdownish-notebook.html
xxiii/: 2023-01-01-strawberry-server.html  2023-01-02-accessible-dataframes-basic-indexes.html  2023-01-04-tfoot-dataframe.html  2023-01-04-using-diagrams.html  2023-01-07-pidgy-voila.html  2023-01-09-notebooks-states.html  2023-01-10-rara-gtfo.html  2023-01-11-duckdb-search.html  2023-01-11-extensible-metadata.html  2023-01-12-giscus-comments.html  2023-01-12-tree-sitter.html  2023-01-14-links-in-markdown-tokens.html  2023-01-16-inspector-hack.html  2023-01-18-voila-pidgy-integration.html  2023-01-24-lite-build.html  2023-01-24-system-dependency-graphs.html  2023-01-24-whoosh-search.html  2023-02-19-semantic.html  2023-02-28-community-demo.html  2023-03-04-computational-notebooks-history.html  2023-03-18-ally-talk.html  2023-03-18-pycascades-ally-talk.html  2023-06-21-v7-aom.html  2023-06-26-dataframe-diagrams-figure-semantics.html  2023-07-17-accessible-string-representations.html  2023-08-03-pandas-accessors.html  2023-08-10-semantic-code-blocks-Copy1.html  2023-08-10-semantic-code-blocks.html  2023-08-23-semantic-lits.html  2023-08-24-semantically-meaningful-displays.html  2023-11-14-w3c-validator.html  2023-12-03-axe-rules-topology.html  2023-12-08-vnu-validator-exceptions.html  2023-12-13-jupyter-community-call.html  2023-12-15-a11y-testing-dimensions.html  2023-12-20-interactive-html-validation.html
xxiv/: 2024-01-05-docx-to-data.html  2024-01-20-colgroup-schema.html  2024-01-25-mast-a11y-notebooks.html  2024-02-05-aiohttp-pandas-accessor.html  2024-02-15-pandas-table-names.html  2024-02-20-multiindex-html.html  2024-02-21-build-docs-pd.html  2024-02-26-bash-midgy.html  2024-02-26-lunr-search.html  2024-02-26-multiindex-aria.html  2024-02-28-histograms-sucks.html  2024-03-01-a11y-list-string.ipynb.html  2024-03-01-notebook-accessibility-workshop.html  2024-03-04-semantic-outputs.html  2024-03-05-astropy-table-repr.html  2024-03-05-traceback-figure-tables.ipynb.html  2024-03-06-mast-revisit.html  2024-03-12-nbconvert-a11y-pres.html  2024-03-13-notebooks-for-all-march-call.html  2024-03-15-screen-tests.html  2024-03-20-exec-mast-nb.html  2024-03-22-documentation-as-data.html  2024-03-22-itables-stream.html  2024-03-23-updating-ipython-config.html  2024-03-26-accessible-documentation-data.html  2024-04-03-markdown-lists-to-python.html  2024-04-04-nbconvert-html-screen-reader.html  2024-04-06-dl-dict.html  2024-04-08-table-plots.html  2024-04-11-3d-html-table.html  2024-04-12-word-cloud.html  2024-04-15-llm-workflow.html  2024-04-17-visual-table-indicator.html  2024-04-17-windchime.html  2024-04-18-a-simple-clock.html  2024-04-23-Untitled42.html  2024-04-28-scroll-position.html  2024-04-29-enrich-refs.html  2024-05-06-stream.html  2024-05-08-stream.html  (+47 more)
(+693 files in other folders)
